# Flexxy-Glove

./: 2  HandController.ino  README.md  flexxy-glove.ino
DataVis/: BLUETOOTH_GUIDE.md  CMakeLists.txt  bluetooth_setup.sh
DataVis/site/: dataVis.js  index.html  main.js  package-lock.json  package.json  styles.css  webpack.config.js
DataVis/src/: bluetoothPort.cpp  bluetoothPort.h  main.cpp  serialPort.cpp  serialPort.h  server.cpp  server.h  websocket.cpp  websocket.h
Firmware/: Cargo.toml
Firmware/src/: main.rs
models/: ESP32_Mount.step  ESP32_Mount.stl  Flexion_Sensor_Housing.step  Flexion_Sensor_Housing.stl
